Fixed overflow.

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -9719,6 +9719,7 @@ h6,
   z-index: 1000;
   display: block;
   max-width: 1000px;
+  overflow: auto;
 }
 
 .background {
